--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
 body{
     font-family: 'Poppins', sans-serif;
-    background: #a8ff78;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-@media (min-width: 800px){
-    body{
-        /* Your styling goes here */
-        background-size: 100vw 100vh;
-    }
+    background-image: url(bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
 }
 .word{
     font-size: 2rem;
-    margin-bottom:  1.5rem;
+    margin-bottom:  1rem;
+    color: white;
 }
 .hidden{
     display: none;
@@ -24,4 +19,8 @@ body{
 }
 .container{
     margin-bottom: 2rem;
+}
+.list-overflow{
+    overflow: scroll;
+    height: 17rem;
 }
